--- a/d3-dsv/v0/tsconfig.json
+++ b/d3-dsv/v0/tsconfig.json
@@ -11,13 +11,13 @@
         ],
         "types": [],
         "paths": {
-            "abs": ["abs/v0"]
+            "d3-dsv": ["d3-dsv/v0"]
         },
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
-        "abs-tests.ts"
+        "d3-dsv-tests.ts"
     ]
 }
