--- a/xrm/v6/tsconfig.json
+++ b/xrm/v6/tsconfig.json
@@ -4,17 +4,20 @@
         "target": "es6",
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "strictNullChecks": true,
-        "baseUrl": "../",
+        "strictNullChecks": false,
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
         "types": [],
+        "paths": {
+            "xrm": ["xrm/v6"]
+        },
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
-        "index-tests.ts"
+        "xrm-tests.ts"
     ]
 }
