--- a/zeroclipboard/v1/tsconfig.json
+++ b/zeroclipboard/v1/tsconfig.json
@@ -3,18 +3,21 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strictNullChecks": true,
-        "baseUrl": "../",
+        "noImplicitThis": false,
+        "strictNullChecks": false,
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
         "types": [],
+        "paths": {
+            "zeroclipboard": ["zeroclipboard/v1"]
+        },
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
-        "index-tests.ts"
+        "zeroclipboard-tests.ts"
     ]
 }
