--- a/format-unicorn/tsconfig.json
+++ b/format-unicorn/tsconfig.json
@@ -15,6 +15,7 @@
     },
     "files": [
         "index.d.ts",
+        "safe.d.ts",
         "format-unicorn-tests.ts",
         "format-unicorn-safe-tests.ts"
     ]
