--- a/d3/v3/tsconfig.json
+++ b/d3/v3/tsconfig.json
@@ -3,8 +3,8 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strictNullChecks": true,
+        "noImplicitThis": false,
+        "strictNullChecks": false,
         "baseUrl": "../../",
         "typeRoots": [
             "../../"
