--- a/handlebars/v1/tsconfig.json
+++ b/handlebars/v1/tsconfig.json
@@ -17,7 +17,6 @@
         "forceConsistentCasingInFileNames": true
     },
     "files": [
-        "index.d.ts",
-        "handlebars-tests.ts"
+        "index.d.ts"
     ]
 }
